--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
-REACT_APP_API=http://localhost:8080    
+REACT_APP_API=https://e-commerce1-backend-aka2.onrender.com
+# http://localhost:8080 
+
               
 # ider Backend ka port likha 
