--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_API=https://e-commerce1-backend-aka2.onrender.com
+REACT_APP_API=https://e-commerce2-sunz.onrender.com
 # http://localhost:8080 
 
               
